Wrote cropped_image_tag helper to correctly display images.

--- a/app/assets/stylesheets/site/article.css.sass
+++ b/app/assets/stylesheets/site/article.css.sass
@@ -44,7 +44,6 @@
     font-style: italic
 
   .main-image
-    width: 100%
     +border-radius($corner-radius)
 
   .photo-credit
